# elmen

./: README.md
elmen/: .gitignore  db.sqlite3  manage.py  pyproject.toml
elmen/cibrum/: apps.py  description.md
elmen/elmen/: asgi.py  settings.py  urls.py  wsgi.py
elmen/fastis/: apps.py  description.md
elmen/lists/: admin.py  models.py
elmen/lists/migrations/: 0001_initial.py
elmen/polls/: models.py  views.py
elmen/polls/migrations/: 0001_initial.py
elmen/polls/templates/polls/: detail.html  index.html
elmen/rankings/: description.md
