[tool.poetry]
name = "elmen"
version = "0.1.0"
description = "A small collection of useful django apps primarily meant for the personal use of the author"
authors = ["Lloyd Meins <dev@lloydmeins.de>"]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
django = "^3.1.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
